--- a/public/src/modules/fte-tools/views/cover-letter-resume-upload.client.view.html
+++ b/public/src/modules/fte-tools/views/cover-letter-resume-upload.client.view.html
@@ -27,8 +27,8 @@
 	</div>
 </div>
 &nbsp;
-<span data-ng-if="application.acl && application.ar">
+<section data-ng-if="application.acl && application.ar">
 	<div class="row-fluid">
 		<hr>
 	</div>
-</span>
+</section>
