--- a/public/src/modules/fte-tools/views/cover-letter-settings.client.view.html
+++ b/public/src/modules/fte-tools/views/cover-letter-settings.client.view.html
@@ -3,7 +3,7 @@
 	<tcems-buffer></tcems-buffer>
 	<div class="form-group">
 		<label class="col-md-8">Accept:</label>
-		<div class="col-md-4 btn-group" data-ng-hide="aclSet">
+		<div class="col-md-4 btn-group" data-ng-hide="data.aclSet">
 			<a class="btn btn-default" data-ng-class="{active: application.acl}" data-ng-disabled="application.rcl" data-ng-click="application.toggle('acl')">
 				<span>Yes</span>
 			</a>
@@ -11,13 +11,13 @@
 				<span>No</span>
 			</a>
 		</div>
-		<div data-ng-show="aclSet">
+		<div data-ng-show="data.aclSet">
 			<strong>Area settings.</strong>
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="col-md-8">Required:</label>
-		<div class="col-md-4 btn-group" data-ng-hide="rclSet">
+		<div class="col-md-4 btn-group" data-ng-hide="data.rclSet">
 			<a class="btn btn-default" data-ng-class="{active: application.rcl}" data-ng-disabled="!application.acl" data-ng-click="application.toggle('rcl')">
 				<span>Yes</span>
 			</a>
@@ -25,7 +25,7 @@
 				<span>No</span>
 			</a>
 		</div>
-		<div data-ng-show="rclSet">
+		<div data-ng-show="data.rclSet">
 			<strong>Area settings.</strong>
 		</div>
 	</div>
