--- a/public/src/modules/applications/views/app.client.view.html
+++ b/public/src/modules/applications/views/app.client.view.html
@@ -5,7 +5,6 @@
 	<div class="form-group ques-well">
 		<label class="control-label">{{q.ques.content}}
 			<span class="text-danger glyphicon glyphicon-asterisk"></span>
-			{{$index%2}}
 		</label>
 		<!-- FreeForm -->
 		<div data-ng-if="q.ques.type === 'FreeForm'">
@@ -37,8 +36,8 @@
 	</div>
 </div>
 &nbsp;
-<span data-ng-if="((application.acl && application.ar) || (!application.acl && !application.ar)) ? $index%2 : $index%2 === 0">
+<section data-ng-if="((application.acl && application.ar) || (!application.acl && !application.ar)) ? $index%2 : $index%2 === 0">
 	<div class="row-fluid">
 		<hr>
 	</div>
-</span>
+</section>
